---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - 
  Changes:
    - Added some warnings when automatically adding your preferred machine or beacon does not work for compatibility reasons. Also added some warning messages when up/downgrading machines and beacons.
  Bugfixes:
    - 

---------------------------------------------------------------------------------------------------
Version: 0.18.28
Date: 07. 06. 2020
  Bugfixes:
    - Fixed a bad mistake on my part that screwed up all the things
    - Added a migration so your preferred belts, beacons and machines are not lost. Fuels will still be reset though.

---------------------------------------------------------------------------------------------------
Version: 0.18.27
Date: 07. 06. 2020
  Features:
    - Now supports any kind of item-fuel, which includes things like mining drills from Pyanodon's and others. Might reset some of the fuels you selected to their default. I'm sorry about this, I tried to migrate it where I could, but there were large background changes that made it so it doesn't work in every case.
    - Also added support for some fluid-fuels. Machines like Bob's steam assembler are still not supported, as the way they work is complicated and requires more background work on my part.
  Changes:
    - The belt/fuel/beacon/machine-choices in preferences are now sorted by their most important attributes. Also added some new attributes to the tooltips.
    - Changed the alt-action preference to be a mod setting instead
  Bugfixes:
    - Fixed a crash when attempting to repair certain subfactories
    - Fixed that once set, module-preferences could not be unset anymore
    - Fixed an issue where the product picker would show two scroll bars in some cases
    - Potentially fixed a crash when trying to open a modal dialog while another one is open
