@@ -398,5 +398,5 @@ tut_beacon_beacon=Left/Right-click: Edit\nControl-right-click: Delete\nShift-lef
 tut_product=Left-click: Prioritize\nShift-left-click: Move right\nControl-left-click: Move left
 tut_byproduct=Shift-left-click: Move right\nControl-left-click: Move left
 tut_ingredient=Left-click: Add recipe\nShift-left-click: Move right\nControl-left-click: Move left
-tut_fuel=Left-click: Add recipe\nRight-click: Edit\nShift-left-click: Move right\nControl-left-click: Move left
+tut_fuel=Left-click: Add recipe\nRight-click: Edit\nShift-left-click: Upgrade\nControl-left-click: Downgrade
 tut_alt_action=\nAlt-click: __1__
