@@ -452,15 +452,37 @@ end
 
 
 -- Handles a click on an line fuel button
-function handle_fuel_button_click(player, line_id, click, alt)
+function handle_fuel_button_click(player, line_id, click, direction, alt)
     if ui_util.check_archive_status(player) then return end
 
     local context = get_context(player)
     local line = Floor.get(context.floor, "Line", line_id)
-    local fuel = line.fuel
+    local fuel = line.fuel  -- must exist to be able to get here
 
     if alt then
         ui_util.execute_alt_action(player, "show_item", {item=fuel.proto, click=click})
+
+    elseif direction ~= nil then  -- change to the previous/next fuel in the list
+        local category_id = global.all_fuels.map[fuel.proto.category]
+        local prototype_table = global.all_fuels.categories[category_id].fuels
+
+        local function change_fuel_proto(factor)
+            local new_proto = prototype_table[fuel.proto.id + factor]
+            if new_proto ~= nil then
+                line.fuel = Fuel.init_by_proto(new_proto, fuel.amount)
+                calculation.update(player, context.subfactory, true)
+            else
+                local type = (factor == 1) and {"fp.upgraded"} or {"fp.downgraded"}
+                local message = {"fp.error_object_cant_be_up_downgraded", {"fp.lfuel"}, type}
+                ui_util.message.enqueue(player, message, "error", 1, true)
+            end
+        end
+
+        if direction == "positive" then
+            change_fuel_proto(1)
+        else  -- direction == "negative"
+            change_fuel_proto(-1)
+        end
 
     else
         if click == "left" then
